--- a/browser.css
+++ b/browser.css
@@ -5,3 +5,11 @@ i { font-style: italic; }
 b { font-weight: bold; }
 small { font-size: 90%; }
 big { font-size: 110%; }
+input {
+  font-size: 16px; font-weight: normal; font-style: normal;
+  background-color: lightblue;
+}
+button {
+  font-size: 16px; font-weight: normal; font-style: normal;
+  background-color: orange;
+}
